[gd_scene load_steps=13 format=3 uid="uid://b6il8d5ok5ax4"]

[ext_resource type="Script" path="res://Options_Scene.gd" id="1_8gq7s"]
[ext_resource type="Texture2D" uid="uid://chr4rry887ix2" path="res://Single_or_multiplayer.png" id="2_2dx5c"]
[ext_resource type="Texture2D" uid="uid://ci50sh0dj8nhp" path="res://Selected_1_Player.png" id="2_axyfp"]
[ext_resource type="Texture2D" uid="uid://dis22x5wq1atj" path="res://Unselected_2_Players.png" id="3_s8tt5"]
[ext_resource type="Texture2D" uid="uid://k8lq8kitd7b3" path="res://Back_Button.png" id="4_8vaa4"]
[ext_resource type="Texture2D" uid="uid://bbhpxr55ocqj1" path="res://Next_Button.png" id="5_eaqws"]
[ext_resource type="Texture2D" uid="uid://sk6f4dpp5dku" path="res://Hard_Mode_Button.png" id="9_8h18k"]
[ext_resource type="Texture2D" uid="uid://btisgpk40omq6" path="res://Normal_Mode_Button.png" id="10_bu6h8"]
[ext_resource type="Texture2D" uid="uid://d1wjafcw5b2nx" path="res://WASD_and_arrows_selected.png" id="11_lnohr"]
[ext_resource type="Texture2D" uid="uid://brdfhsclopupm" path="res://Cursor_unselected.png" id="11_s2pts"]
[ext_resource type="Texture2D" uid="uid://b1glcseshapst" path="res://Selected_Unmute.png" id="11_yub4o"]
[ext_resource type="Texture2D" uid="uid://bn334j18lycvm" path="res://Unselected_Mute.png" id="12_grnkl"]

[node name="Options_Scene" type="Node"]
script = ExtResource("1_8gq7s")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 8662.0
offset_bottom = 4872.0
scale = Vector2(0.133, 0.133)
texture = ExtResource("2_2dx5c")

[node name="Single_Player_Button" type="Button" parent="."]
offset_left = 50.0
offset_top = 378.0
offset_right = 1210.0
offset_bottom = 584.0
scale = Vector2(0.754, 0.754)
icon = ExtResource("2_axyfp")
flat = true

[node name="Multiplayer_Button" type="Button" parent="."]
offset_left = 282.0
offset_top = 526.0
offset_right = 1442.0
offset_bottom = 692.0
scale = Vector2(0.75, 0.75)
icon = ExtResource("3_s8tt5")
flat = true

[node name="Back_Button" type="Button" parent="."]
z_index = 10
offset_left = 1.0
offset_top = -9.0
offset_right = 509.0
offset_bottom = 279.0
scale = Vector2(0.4, 0.4)
icon = ExtResource("4_8vaa4")
flat = true

[node name="Next_Button" type="Button" parent="."]
z_index = 10
offset_left = 971.0
offset_top = 3.0
offset_right = 2131.0
offset_bottom = 659.0
scale = Vector2(0.15, 0.15)
icon = ExtResource("5_eaqws")
flat = true

[node name="Hard_Mode_Button" type="Button" parent="."]
offset_left = 207.0
offset_top = 489.0
offset_right = 2535.0
offset_bottom = 989.0
scale = Vector2(0.3, 0.3)
icon = ExtResource("9_8h18k")

[node name="Normal_Mode_Button" type="Button" parent="."]
offset_left = 205.0
offset_top = 336.0
offset_right = 2533.0
offset_bottom = 836.0
scale = Vector2(0.3, 0.3)
icon = ExtResource("10_bu6h8")
flat = true

[node name="Unmute_Button" type="Button" parent="."]
offset_left = 41.0
offset_top = 331.0
offset_right = 1093.0
offset_bottom = 1103.0
scale = Vector2(0.4, 0.4)
icon = ExtResource("11_yub4o")
flat = true

[node name="Mute_Button" type="Button" parent="."]
offset_left = 636.0
offset_top = 332.0
offset_right = 2056.0
offset_bottom = 1264.0
scale = Vector2(0.33, 0.33)
icon = ExtResource("12_grnkl")
flat = true

[node name="Cursor_Button" type="Button" parent="."]
offset_left = 750.0
offset_top = 400.0
offset_right = 1472.0
offset_bottom = 915.0
scale = Vector2(0.4, 0.4)
icon = ExtResource("11_s2pts")
flat = true

[node name="WASD_and_arrows_Button" type="Button" parent="."]
offset_left = 100.0
offset_top = 430.0
offset_right = 1168.0
offset_bottom = 821.0
scale = Vector2(0.4, 0.4)
icon = ExtResource("11_lnohr")
flat = true

[connection signal="pressed" from="Single_Player_Button" to="." method="_on_single_player_button_pressed"]
[connection signal="pressed" from="Multiplayer_Button" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Next_Button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Hard_Mode_Button" to="." method="_on_hard_mode_button_pressed"]
[connection signal="pressed" from="Normal_Mode_Button" to="." method="_on_normal_mode_button_pressed"]
[connection signal="pressed" from="Unmute_Button" to="." method="_on_unmute_button_pressed"]
[connection signal="pressed" from="Mute_Button" to="." method="_on_mute_button_pressed"]
[connection signal="pressed" from="Cursor_Button" to="." method="_on_cursor_button_pressed"]
[connection signal="pressed" from="WASD_and_arrows_Button" to="." method="_on_wasd_and_arrows_button_pressed"]
